--- a/Programmi_VSCode/html_css/yt_styles/header.css
+++ b/Programmi_VSCode/html_css/yt_styles/header.css
@@ -5,17 +5,80 @@
     justify-content: space-between;
 }
 .left-section{
-    background-color: lightblue;
     width: 160px;
+    display: flex;
+    align-items: center;
+}
+.hamburger{
+    height: 22px;
+    margin-left: 20px;
+}
+.yt-logo{
+    height: 20px;
+    margin-left: 20px;
 }
 .middle-section{
-    background-color: lightgreen;
     flex: 1;
     margin-left: 70px;
     margin-right: 35px;
     max-width: 500px;
+    display: flex;
+    align-items: center;
+}
+.search-bar{
+    height: 34px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(204, 201, 201);
+    border-radius: 2px;
+    box-shadow:inset 0px 1px 5px rgba(0,0,0,0.10);
+    flex: 1;
+    width: 0px;
+}
+.search-bar::placeholder{
+    font-size: 14px;
+    color: rgb(128, 124, 124);
+    padding-left: 6px;
+    font-family: Roboto, Arial;
+}
+.search-button{
+    height: 37.5px;
+    width: 65px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(204, 201, 201);
+    margin-left: -1px;
+    background-color: rgb(253, 249, 249);
+    border-radius: 2px;
+}
+.search-icon{
+    height: 23px;
+    margin-top: 4px;
+}
+.voice-button{
+    margin-left: 8px;
+    height: 37px;
+    width: 40px;
+    border: none;
+    border-radius: 40px;
+    background-color: rgb(253, 249, 249);
+}
+.voice{
+    width: 25px;
+    padding-top: 4px;
 }
 .right-section{
-    background-color: lightcoral;
     width: 230px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-shrink: 0;
+}
+.upload,.yt-app,.notifications{
+    height: 24px;
+}
+.owner-channel{
+    height: 32px;
+    border-radius: 45px;
+    margin-right: 25px;
 }
