learned css position property and added to youtube clone
 edited youtube clone header with position attribute and iniziating sidebar

--- a/Programmi_VSCode/html_css/yt_styles/header.css
+++ b/Programmi_VSCode/html_css/yt_styles/header.css
@@ -1,8 +1,16 @@
 .header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     height: 51px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: white;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(214, 210, 210);
 }
 .left-section{
     width: 160px;
@@ -30,7 +38,8 @@
     border-style: solid;
     border-width: 1px;
     border-color: rgb(204, 201, 201);
-    border-radius: 2px;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
     box-shadow:inset 0px 1px 5px rgba(0,0,0,0.10);
     flex: 1;
     width: 0px;
@@ -42,14 +51,15 @@
     font-family: Roboto, Arial;
 }
 .search-button{
-    height: 37.5px;
+    height: 38px;
     width: 65px;
     border-style: solid;
     border-width: 1px;
     border-color: rgb(204, 201, 201);
     margin-left: -1px;
     background-color: rgb(253, 249, 249);
-    border-radius: 2px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
 }
 .search-icon{
     height: 23px;
