--- a/Programmi_VSCode/html_css/yt_styles/general.css
+++ b/Programmi_VSCode/html_css/yt_styles/general.css
@@ -8,4 +8,6 @@ body{
     height: 10000px;
     padding-top: 75px;
     padding-left: 95px;
+    padding-right: 24px;
+    background-color: rgb(248, 246, 246);
 }
