--- a/Programmi_VSCode/html_css/yt_styles/header.css
+++ b/Programmi_VSCode/html_css/yt_styles/header.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 51px;
+    height: 57px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -11,6 +11,7 @@
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: rgb(214, 210, 210);
+    z-index: 100;
 }
 .left-section{
     width: 160px;
@@ -23,13 +24,13 @@
 }
 .yt-logo{
     height: 20px;
-    margin-left: 20px;
+    margin-left: 28px;
 }
 .middle-section{
     flex: 1;
     margin-left: 70px;
     margin-right: 35px;
-    max-width: 500px;
+    max-width: 470px;
     display: flex;
     align-items: center;
 }
@@ -61,9 +62,43 @@
     border-top-right-radius: 2px;
     border-bottom-right-radius: 2px;
 }
+.search-button,
+.voice-button,
+.upload-container,
+.yt-app-container,
+.notifications-container{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.search-button .tooltip,
+.voice-button .tooltip,
+.upload-container .tooltip,
+.yt-app-container .tooltip,
+.notifications-container .tooltip{
+    font-family: Roboto, Arial;
+    position: absolute;
+    background-color: gray;
+    color: white;
+    padding: 8px;
+    border-radius: 4px;
+    font-size: 12px;
+    bottom: -30px;
+    opacity: 0;
+    transition: ocapity 0.15s;
+    pointer-events: none;
+    white-space: nowrap;
+}
+.search-button:hover .tooltip,
+.voice-button:hover .tooltip,
+.upload-container:hover .tooltip,
+.yt-app-container:hover .tooltip,
+.notifications-container:hover .tooltip{
+    opacity: 1;
+}
 .search-icon{
     height: 23px;
-    margin-top: 4px;
 }
 .voice-button{
     margin-left: 8px;
@@ -75,7 +110,6 @@
 }
 .voice{
     width: 25px;
-    padding-top: 4px;
 }
 .right-section{
     width: 230px;
@@ -91,4 +125,15 @@
     height: 32px;
     border-radius: 45px;
     margin-right: 25px;
+}
+.notifications-number{
+    position: absolute;
+    right: -5px;
+    top: -2px;
+    background-color: rgb(189, 6, 6);
+    color: white;
+    font-family: Roboto, Arial;
+    font-size: 10px;
+    padding: 2px 6px;
+    border-radius: 100px;
 }
