--- a/Programmi_VSCode/html_css/yt_styles/sidebar.css
+++ b/Programmi_VSCode/html_css/yt_styles/sidebar.css
@@ -4,14 +4,26 @@
     bottom: 0;
     left: 0;
     top: 50px;
-    width: 63px;
+    width: 72px;
+    z-index: 101;
+    padding-top: 12px;
 }
-.sidebar-icon{
-    width: 25px;
-    padding-left: 20px;
-    padding-top: 20px;
+.sidebar-link{
+    height: 74px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
 }
-.sidebar-text{
-    padding-left: 20px;
+.sidebar-link:hover{
+    background-color: rgb(241, 240, 240);
+}
+.sidebar-link img{
+    height: 24px;
+    margin-bottom: 5px;
+}
+.sidebar-link div{
+    font-family: Roboto, Arial;
     font-size: 10px;
 }
