--- a/Programmi_VSCode/html_css/yt_styles/video.css
+++ b/Programmi_VSCode/html_css/yt_styles/video.css
@@ -1,16 +1,19 @@
 .thumbnail{
     width: 100%;
+    cursor: pointer;
 }
 .video-title{
     font-weight: 500;
-    font-size: 14.5px;
-    width: 210px;
+    font-size: 14px;
+    width: 100%;
     display: inline-block;
     vertical-align: middle;
-    margin-top: 10px;
+    margin-top: 8px;
     line-height: 22px;
-    margin-bottom: 10px;
-
+    margin-bottom: 8px;
+    text-decoration: none;
+    color: black;
+    font-family: Roboto, Arial;
 }
 .channel,.visual{
     font-size: 12px;
@@ -22,20 +25,67 @@
     grid-template-columns: 50px 1fr;
 }
 .video-icon{
-    vertical-align: top;  
+    vertical-align: top; 
 }
 .icon{
     border-radius: 100px;
-    width: 37px;
+    width: 36px;
     margin-top: 10px;
     margin-right: 10px;
+    cursor: pointer;
+}
+.icon-container{
+    display: inline-block;
+    position: relative;
 }
 .channel{
     margin-bottom: 4px;
+}
+.channel-tooltip{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    width: 200px;
+    padding: 10px 8px;
+    border-radius: 4px;
+    box-shadow: 4px 1px 10px rgba(0, 0, 0, 0.192);
+    opacity: 0;
+    transition: ocapity 0.15s;
+    pointer-events: none;
+    z-index: 300;
+    top: 55px;
+}
+.video-icon:hover .channel-tooltip{
+    opacity: 1;
+}
+.channel-tooltip img{
+    width: 45px;
+    border-radius: 40px;
+    margin-right: 6px;
+}
+.channel-subs{
+    font-size: 15px;
+    margin-top: 4px;
+    color: rgb(153, 152, 152);
 }
 .video-grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 16px;
     row-gap: 40px;
+}
+.video-img{
+    position: relative;
+}
+.video-time{
+    font-family: Roboto, Arial;
+    font-size: 14px;
+    font-weight: 500;
+    background-color: black;
+    color: white;
+    position: absolute;
+    bottom: 8px; right: 5px;
+    padding: 4px 2px ;
+    border-radius: 4px;
 }
