completed video tutorial

--- a/Programmi_VSCode/html_css/yt_styles/sidebar.css
+++ b/Programmi_VSCode/html_css/yt_styles/sidebar.css
@@ -1,29 +1,69 @@
-.sidebar{
-    position: fixed;
-    background-color: white;
-    bottom: 0;
-    left: 0;
-    top: 50px;
-    width: 72px;
-    z-index: 101;
-    padding-top: 12px;
+@media (max-width:1200px){
+    .sidebar{
+        position: fixed;
+        background-color: white;
+        bottom: 0;
+        left: 0;
+        top: 50px;
+        width: 72px;
+        z-index: 101;
+        padding-top: 12px;
+    }
+    .sidebar-link{
+        height: 74px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        cursor: pointer;
+    }
+    .sidebar-link:hover{
+        background-color: rgb(241, 240, 240);
+    }
+    .sidebar-link img{
+        height: 24px;
+        margin-bottom: 5px;
+    }
+    .sidebar-link div{
+        font-size: 10px;
+    }
 }
-.sidebar-link{
-    height: 74px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    cursor: pointer;
-}
-.sidebar-link:hover{
-    background-color: rgb(241, 240, 240);
-}
-.sidebar-link img{
-    height: 24px;
-    margin-bottom: 5px;
-}
-.sidebar-link div{
-    font-family: Roboto, Arial;
-    font-size: 10px;
+@media (min-width:1200.1px){
+    .sidebar{
+        position: fixed;
+        background-color: white;
+        bottom: 0;
+        left: 0;
+        top: 50px;
+        width: 270px;
+        z-index: 101;
+        padding-top: 12px;
+    }
+    .sidebar-link{
+        height: 74px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+    }
+    .sidebar-link:hover{
+        background-color: rgb(241, 240, 240);
+    }
+    .sidebar-link img{
+        height: 24px;
+        margin-bottom: 5px;
+        margin-left: 20px;
+    }
+    .sidebar-link div{
+        font-size: 15px;
+        margin-left: 20px;
+    }
+    body{
+        margin: 0;
+        height: 10000px;
+        padding-top: 75px;
+        padding-left: 295px;
+        padding-right: 24px;
+        background-color: rgb(248, 246, 246);
+        font-family: Roboto, Arial;
+    }
 }
