--- a/Programmi_VSCode/html_css/yt_styles/general.css
+++ b/Programmi_VSCode/html_css/yt_styles/general.css
@@ -1,13 +1,15 @@
 p{
-    font-family: Roboto, Arial;
     margin-top: 0;
     margin-bottom: 0;
 }
-body{
-    margin: 0;
-    height: 10000px;
-    padding-top: 75px;
-    padding-left: 95px;
-    padding-right: 24px;
-    background-color: rgb(248, 246, 246);
+@media (max-width:1200px){
+    body{
+        margin: 0;
+        height: 10000px;
+        padding-top: 75px;
+        padding-left: 95px;
+        padding-right: 24px;
+        background-color: rgb(248, 246, 246);
+        font-family: Roboto, Arial;
+    }
 }
