--- a/Programmi_VSCode/html_css/yt_styles/header.css
+++ b/Programmi_VSCode/html_css/yt_styles/header.css
@@ -36,9 +36,7 @@
 }
 .search-bar{
     height: 34px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(204, 201, 201);
+    border: 1px solid rgb(192,192,192);
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
     box-shadow:inset 0px 1px 5px rgba(0,0,0,0.10);
@@ -49,7 +47,6 @@
     font-size: 14px;
     color: rgb(128, 124, 124);
     padding-left: 6px;
-    font-family: Roboto, Arial;
 }
 .search-button{
     height: 38px;
@@ -77,7 +74,6 @@
 .upload-container .tooltip,
 .yt-app-container .tooltip,
 .notifications-container .tooltip{
-    font-family: Roboto, Arial;
     position: absolute;
     background-color: gray;
     color: white;
@@ -132,7 +128,6 @@
     top: -2px;
     background-color: rgb(189, 6, 6);
     color: white;
-    font-family: Roboto, Arial;
     font-size: 10px;
     padding: 2px 6px;
     border-radius: 100px;
