--- a/Programmi_VSCode/html_css/yt_styles/video.css
+++ b/Programmi_VSCode/html_css/yt_styles/video.css
@@ -20,6 +20,15 @@
     margin-top: 3px;
     color: rgb(96, 96, 96);
 }
+@media (max-width:1000px){
+    .video-title{
+        font-size: 16px;
+        line-height: 24px;
+    }
+    .channel,.visual{
+        font-size: 14px;
+    }
+}
 .video-info-grid{
     display: grid;
     grid-template-columns: 50px 1fr;
@@ -34,29 +43,27 @@
     margin-right: 10px;
     cursor: pointer;
 }
-.icon-container{
+.profile-icon-container{
     display: inline-block;
     position: relative;
 }
-.channel{
-    margin-bottom: 4px;
-}
+
 .channel-tooltip{
     position: absolute;
     display: flex;
     align-items: center;
     background-color: white;
     width: 200px;
-    padding: 10px 8px;
+    padding: 12px 12px;
     border-radius: 4px;
     box-shadow: 4px 1px 10px rgba(0, 0, 0, 0.192);
     opacity: 0;
     transition: ocapity 0.15s;
-    pointer-events: none;
+    pointer-events:none;
     z-index: 300;
     top: 55px;
 }
-.video-icon:hover .channel-tooltip{
+.profile-icon-container:hover .channel-tooltip{
     opacity: 1;
 }
 .channel-tooltip img{
@@ -69,17 +76,29 @@
     margin-top: 4px;
     color: rgb(153, 152, 152);
 }
+.channel{
+    margin-bottom: 4px;
+}
 .video-grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 16px;
     row-gap: 40px;
 }
+@media (max-width:1100px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+@media (max-width:800px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr;
+    }
+}
 .video-img{
     position: relative;
 }
 .video-time{
-    font-family: Roboto, Arial;
     font-size: 14px;
     font-weight: 500;
     background-color: black;
