conluded youtube clone dio porco

--- a/Programmi_VSCode/html_css/yt_styles/sidebar.css
+++ b/Programmi_VSCode/html_css/yt_styles/sidebar.css
@@ -59,7 +59,7 @@
     }
     body{
         margin: 0;
-        height: 10000px;
+        width: 100%;
         padding-top: 75px;
         padding-left: 295px;
         padding-right: 24px;
