--- a/Programmi_VSCode/html_css/yt_styles/general.css
+++ b/Programmi_VSCode/html_css/yt_styles/general.css
@@ -5,7 +5,7 @@ p{
 @media (max-width:1200px){
     body{
         margin: 0;
-        height: 10000px;
+        width: 100%;
         padding-top: 75px;
         padding-left: 95px;
         padding-right: 24px;
